--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
@@ -1,4 +1,4 @@
-<div class="overview-right-body">
+<div customScroll class="overview-right-body">
     <div>
         <span class="unitpal-font bed-icon-overview">{{bedVM.template.iconUrl}}</span>
     </div>
