--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -1,5 +1,6 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<div class="row" *ngIf="!isLoading">
+<div class="basic-info-form-container" customScroll>
+<div class="row basic-info-form" *ngIf="!isLoading">
 	<div class="col-xs-12 col-md-4">
 		<label class="control-label">
 			<h3>{{ 'Select the default currency' | translate }}  </h3>
@@ -40,6 +41,7 @@
 	<div class="col-xs-12 col-md-4">
 		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="otherTaxType"></basic-info-tax-list>
 	</div>
+</div>
 </div>
 <div class="row" *ngIf="!isLoading">
 	<div class="col-xs-12 col-md-offset-8 col-md-4" *ngIf="canAutoSave">
