--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -18,6 +18,7 @@
 	<link href="/node_modules/animate.css/animate.min.css" rel="stylesheet">
 	<link href="/node_modules/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 	<link href="/node_modules/toastr/build/toastr.min.css" rel="stylesheet">
+	<link href="/client/static-assets/css/simplebar.css" rel="stylesheet">
 	<!-- Custom CSS -->
 	<link href="/client/static-assets/css/unitpal.css" rel="stylesheet">
 
@@ -42,8 +43,8 @@
 	<script src="/node_modules/underscore/underscore-min.js"></script>
 	<script src="/node_modules/bootstrap-daterangepicker/daterangepicker.js"></script>
 	<script src="/node_modules/pace-progress/pace.min.js"></script>
-	<script src="/node_modules/floatthead/dist/jquery.floatThead.js"></script>
-
+	<script src="/client/static-assets/scripts/simplebar.min.js"></script>
+	
 	<%if (isDevelopmentEnvironment == true) {%>
 		<script>
 			System.config({
