--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -34,7 +34,9 @@
 	<table [ngClass]="getTableClasses()">
 		<thead>
 			<tr>
-				<th *ngFor="let columnMeta of columnMetaList" [ngClass]="isCollapsed? columnMeta.valueMeta.collapsedStyle : columnMeta.valueMeta.normalStyle">
+				<th *ngFor="let columnMeta of columnMetaList" 
+					[ngClass]="isCollapsed? columnMeta.valueMeta.collapsedStyle : columnMeta.valueMeta.normalStyle"
+					title="{{ columnMeta.displayName | translate }}">
 					{{ columnMeta.displayName | translate }}
 				</th>
 				<th [ngClass]="{'up-col-10p': !isCollapsed, 'up-col-30p': isCollapsed}">
@@ -53,10 +55,10 @@
 									{{ getDependentItemValue(item, columnMeta.valueMeta) }}
 									{{ getItemValue(item, columnMeta.valueMeta) | price }}
 								</span>
-					<span *ngIf="isStringOrNumber(columnMeta.valueMeta)">
+					<span *ngIf="isStringOrNumber(columnMeta.valueMeta)" title="{{ getItemValue(item, columnMeta.valueMeta) | translate }}">
 									{{ getItemValue(item, columnMeta.valueMeta) | translate }}
 								</span>
-					<span *ngIf="isNotes(columnMeta.valueMeta)">
+					<span *ngIf="isNotes(columnMeta.valueMeta)" title="{{ getItemValue(item, columnMeta.valueMeta) | translate }}">
 									<small>
 										{{ getItemValue(item, columnMeta.valueMeta) | translate }}
 									</small>
