--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-overview/template/room-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-overview/template/room-overview.html
@@ -1,4 +1,4 @@
-<div class="overview-right-body th-padding-top">
+<div customScroll class="overview-right-body">
     <div>
         <img class="img-responsive" [src]="roomVM.imageUrl" *ngIf="roomVM.imageUrl" />
     </div>
