--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/modal/template/price-products-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/modal/template/price-products-modal.html
@@ -2,7 +2,7 @@
 	<button type="button" class="close" (click)="closeDialog()">&times;</button>
 	<h4 class="modal-title">{{ 'Select Price Product' | translate }}</h4>
 </div>
-<div class="modal-body">
+<div class="modal-body table-selection">
 		<div class="row">
 		<ul class="nav nav-tabs">
 			<li [ngClass]="{active : !isPublicAvailability}">
