--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="row card-body">
-	<div class="col-xs-9 col-md-9 basic-info-container customScroll">
+	<div class="col-xs-9 col-md-9 basic-info-container">
 		<basic-info-overview-edit></basic-info-overview-edit>
 	</div>
 	<div class="col-xs-3 col-md-3 overview-right">
