--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -1,52 +1,53 @@
 <loading-component [isLoading]="isLoading"></loading-component>
 <div class="basic-info-form-container" customScroll>
-<div class="row basic-info-form" *ngIf="!isLoading">
-	<div class="col-xs-12 col-md-4">
-		<label class="control-label">
+	<div class="row basic-info-form" *ngIf="!isLoading">
+		<div class="col-xs-12 col-md-4">
+			<label class="control-label">
 			<h3>{{ 'Select the default currency' | translate }}  </h3>
 			<small>{{ 'This will be used across all your Price Products, Add On Products and Invoices' | translate }}</small>
 		</label>
-		<div class="form-group">
-			<div class="input-group" [ngClass]="{'form-warning': (!hotel.ccyCode && didSubmitForm)}">
-				<select class="form-control" [ngModel]="hotel.ccyCode" (ngModelChange)="didChangeCurrencyCode($event)">
+			<div class="form-group">
+				<div class="input-group" [ngClass]="{'form-warning': (!hotel.ccyCode && didSubmitForm)}">
+					<select class="form-control" [ngModel]="hotel.ccyCode" (ngModelChange)="didChangeCurrencyCode($event)">
 					<option value="" disabled>{{ 'Select a currency' | translate }}</option>
 					<option *ngFor="let currency of currencies.currencyList" [value]="currency.code">{{currency.code}} - {{currency.name}}</option>
 				</select>
+				</div>
+				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select a currency' | translate }}</small></label>
 			</div>
-			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select a currency' | translate }}</small></label>
-		</div>
 
-		<hr>
+			<hr>
 
-		<label class="control-label">Payment Methods</label>
-		<div class="well form-group">
-			<div class="input-group" [ngClass]="{'form-warning': (!didSelectPaymentMethod()&&didSubmitForm)}">
-				<ul class="list-group checked-list-box">
-					<div class="checkbox" *ngFor="let paymentMethodVM of paymentMethods.paymentMethodList">
-						<label>
+			<label class="control-label">Payment Methods</label>
+			<div class="well form-group">
+				<div class="input-group" [ngClass]="{'form-warning': (!didSelectPaymentMethod()&&didSubmitForm)}">
+					<ul class="list-group checked-list-box">
+						<div class="checkbox" *ngFor="let paymentMethodVM of paymentMethods.paymentMethodList">
+							<label>
 							<input type="checkbox" [(ngModel)]="paymentMethodVM.isSelected"><i class="fa" [ngClass]="paymentMethodVM.paymentMethod.iconUrl"></i> {{paymentMethodVM.paymentMethod.name}}
 						</label>
-					</div>
-				</ul>
+						</div>
+					</ul>
+				</div>
+				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method' | translate }}</small></label>
 			</div>
-			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method' | translate }}</small></label>
+
 		</div>
 
-	</div>
+		<div class="col-xs-12 col-md-4">
+			<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="vatTaxType"></basic-info-tax-list>
+		</div>
 
-	<div class="col-xs-12 col-md-4">
-		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="vatTaxType"></basic-info-tax-list>
-	</div>
-
-	<div class="col-xs-12 col-md-4">
-		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="otherTaxType"></basic-info-tax-list>
-	</div>
-</div>
-</div>
-<div class="row" *ngIf="!isLoading">
-	<div class="col-xs-12 col-md-offset-8 col-md-4" *ngIf="canAutoSave">
-		<button type="button" class="btn btn-primary btn-block" (click)="savePaymentsAndPolicies()">
+		<div class="col-xs-12 col-md-4">
+			<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="otherTaxType"></basic-info-tax-list>
+		</div>
+		<div *ngIf="!isLoading" class="col-xs-12 col-md-offset-9 col-md-3" *ngIf="canAutoSave">
+			<button type="button" class="btn btn-primary btn-block" (click)="savePaymentsAndPolicies()">
 			<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
 		</button>
+		</div>
 	</div>
+	
+		
+	
 </div>
