--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/add-on-products/template/settings-add-on-products.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/add-on-products/template/settings-add-on-products.html
@@ -1,3 +1,3 @@
-<div class="card th-padding-top">
-	<add-on-products class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></add-on-products>
+<div class="card">
+	<add-on-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></add-on-products>
 </div>
