--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -172,10 +172,6 @@ header {
     color: #fc8333;
 }
 
-.page-info {
-    padding: 12px;
-}
-
 basic-information,
 beds,
 rooms,
@@ -343,7 +339,7 @@ table .buttons,table button,table .btn {
 
 .overview-right {
     border-left: 1px solid #ccc;
-    padding: 0 0 0 24px;
+    padding: 5px 0 0 24px;
     height: 100%;
 }
 .overview-right h1 {
@@ -1072,4 +1068,19 @@ table.lazy-loading .th-pagination {
 
 .edit-form-container {
     padding: 10px;
+}
+
+.basic-info-settings-container {
+    height: 100%;
+    padding: 0px;
+    overflow: hidden;
+}
+
+.basic-info-settings-tabbar {
+    margin-top: 10px;            
+}
+
+.basic-info-settings-edit-container {
+    height: calc(100% - 53px);
+    padding: 5px 0 5px 0;       
 }
