added customer font icons

--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
@@ -6,8 +6,7 @@
 		<h1>{{customerVM.customerNameString}}</h1>
 	</div>
 	<div>
-		<i class="fa fa-male" 
-			[ngClass]="{'fa-male': customerVM.customer.isIndividual(), 'fa-building': customerVM.customer.isCompany(), 'fa-automobile': customerVM.customer.isTravelAgency()}"></i> 
+		<span class="unitpal-font">{{ customerVM.customerTypeFont }}</span> 
 		<small>{{customerVM.customerTypeString}}</small>
 	</div>
 	<div>
